[package]
name = "sim-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Different simulations. Lib and bin for execution"
license = "MIT OR Apache-2.0"


[dependencies]
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
image = "0.24"
rand = "0.8"
hecs = "0.10"


